project3/ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - https-example.foo.com
    secretName: https-example.foo.com
  rules:
  - host: https-example.foo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foo-svc
            port:
              number: 80

---
---
kind: Deployment 
apiVersion: apps/v1 
metadata:
  name: foo-deploy
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: foo-app
  template: # 레플리카 부족한 상황 오면 파드 템플릿 보고 띄움
    metadata: 
      name: foo-pod
      labels: 
        app: foo-app
    spec: 
      containers:
      - name: foo-container
        image: whatwant/node-web:2.0 
        ports: 
        - containerPort: 8080

---
kind: Service 
apiVersion: v1
metadata:   
   name: foo-svc 
spec: #서비스 내용
  #type: ClusterIP
  #clusterIP: 10.233.10.10
  selector:
    app: foo-app
  ports: #포트는 이거 그림보고 확인 or 예제
    - port: 80   #서비스의 80포트
      targetPort: 8080 # 타겟 포드쪽 8080 포트
